--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.siweb</groupId>
     <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>client</name>
+    <name>SIweb</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -64,7 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.siweb/com.siweb.HelloApplication</mainClass>
+                            <mainClass>com.siweb.App/com.siweb.App</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
